chore: bind Recorder Next R23 candidate to Git
candidate archive sha256: f186b7a4f8476fe8b51191f9ae36bca08c96aaa78fe9a34a731ecb6f6177a033

product sha256: f5e54c7c71d9eba81b4189df3b1d611314eed8f2bdb1e9f67f3e458eb24068b0

public main: 32fc5f4b31b8282d1b182ea6cfad86e3ed6d6d91
